--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,4 +16,9 @@ jobs:
       - run:
           name: Check that all the languages interlock
           command: ./check.bat
-
+workflows:
+  version: 2
+  build:
+    jobs:
+      - build-buildpack
+      - build-node
