--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,8 @@ jobs:
       - image: circleci/buildpack-deps:stretch
     steps:
       - checkout
+      - run: git submodule sync
+      - run: git submodule update --init
       - run:
           name: Check that all the languages interlock
           command: ./check.bat
@@ -13,6 +15,8 @@ jobs:
       - image: circleci/node
     steps:
       - checkout
+      - run: git submodule sync
+      - run: git submodule update --init
       - run:
           name: Check that all the languages interlock
           command: ./check.bat
