--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,22 @@
 {
     "compilerOptions": {
-        "target": "es6",
+        "target": "esnext",
+        "allowJs": true,
+        "checkJs": true,
+        "noEmit": true,
         "module": "es6",
-        //"noImplicitAny": true,
-        "typeRoots": ["./typings"],
+        "noImplicitAny": true,
+        "typeRoots": ["./lib"],
         "alwaysStrict": true,
         "isolatedModules": true,
         "noLib": true,
-        "baseUrl": "./lib",
-        "types": [
-            "./lib/jessie",
-        ],
-        "noEmit": true,
-        "moduleResolution": "mjs",
+        "types": [],
     },
     "include": [
         "lib/**/*",
     ],
     "exclude": [
+        "node_modules/**",
         "**/*.spec.mjs",
     ],
 }
