--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,16 @@
 {
     "compilerOptions": {
-        "target": "esnext",
-        "allowJs": true,
-        "checkJs": true,
-        "noEmit": true,
+        "target": "es2017",
         "module": "es6",
-        "noImplicitAny": true,
-        "typeRoots": ["./lib"],
+        "typeRoots": ["./typings"],
         "alwaysStrict": true,
-        "noLib": true,
-        "types": [],
+        "types": ["./typings/lib.jessie"]
     },
     "include": [
-        "lib/**/*",
+        "lib/**/*"
     ],
     "exclude": [
         "node_modules/**",
-        "**/*.spec.mjs",
-    ],
+        "**/*.spec.ts"
+    ]
 }
