Get ts-node working.

--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "lang/nodejs/jesspipe.mjs",
   "scripts": {
     "build": "build.bat",
-    "clean": "rm -f lib/*.mjs.js lib/*.mjs",
+    "clean": "rm -rf esm",
     "test": "check.bat"
   },
   "author": "Michael FIG <michael@fig.org>",
   "license": "Apache-2.0",
   "dependencies": {
-    "ses": "^0.3.0"
+    "ses": "^0.3.0",
+    "ts-node": "^8.0.2"
   },
   "devDependencies": {
     "typescript": "^3.3.0"
