--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
         "target": "es2017",
         "module": "es6",
         "typeRoots": ["./typings"],
+        "outDir": "./esm",
         "alwaysStrict": true,
         "types": ["./typings/lib.jessie"]
     },
