--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "module": "es6",
         "typeRoots": ["./typings"],
         "outDir": "./esm",
+        "noImplicitAny": true,
         "alwaysStrict": true,
         "types": ["./typings/lib.jessie"]
     },
