--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,8 @@
         "module": "es6",
         "typeRoots": ["./typings"],
         "noImplicitAny": true,
+        "noEmitOnError": true,
+        "sourceMap": true,
         "alwaysStrict": true,
         "types": ["./typings/lib.jessie"]
     },
