--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "module": "es6",
         "typeRoots": ["./typings"],
         "noImplicitAny": true,
-        "noEmitOnError": true,
+        "noEmit": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "alwaysStrict": true,
