--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "esnext",
         "module": "es6",
-        "typeRoots": ["./typings"],
+        "typeRoots": ["./typings", "./node_modules/@types"],
         "noImplicitAny": true,
         "noEmit": true,
         "noUnusedLocals": true,
