--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
     "compilerOptions": {
+        "baseUrl": ".",
+        "paths": { "*": ["types/*"] },
         "target": "esnext",
         "module": "es6",
         "typeRoots": ["./typings", "./node_modules/@types"],
@@ -8,7 +10,7 @@
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "alwaysStrict": true,
-        "types": ["./typings/lib.jessie"]
+        "types": ["./typings/lib.jessie", "./node_modules/@michaelfig/slog/slog"]
     },
     "include": [
         "lib/**/*"
