--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "jessica",
   "version": "0.0.2",
   "description": "Jessica - the Jessie Compiler Architecture",
-  "main": "lang/nodejs/jesspipe.mjs",
   "scripts": {
     "build": "build.bat",
     "check-types": "tsc",
@@ -12,7 +11,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@agoric/jessie": "file:../../Jessie",
-    "@michaelfig/slog": "file:../slog",
+    "@michaelfig/slog": "0.0.1",
     "@types/agoric__jessie": "file:../../agoric__jessie",
     "@types/michaelfig__slog": "file:../../michaelfig__slog"
   },
